fix: changed z-index to title block home page

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -148,6 +148,7 @@
   line-height: 100%;
   text-align: center;
   padding-bottom: 40px;
+  z-index: 2;
 }
 .titleBlockSubtitle {
   font-size: 16px;
@@ -155,6 +156,7 @@
   line-height: 149%;
   text-align: center;
   max-width: 600px;
+  z-index: 2;
 }
 .supportedLableBlock {
 }
